# riso-discover-feed

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  discover.json  pyproject.toml
.github/workflows/: build-discover.yml
samples/: discover.sample.json
src/riso_discover/: __init__.py  build.py  cache.py  config.py  metron_gateway.py  models.py  resolver.py  store.py
src/riso_discover/sources/: __init__.py  base.py  cbr.py  classics.py  metron.py  rss.py  wikidata.py
state/: aipt_reviews.json  cbr_lists.json
tests/: test_build.py  test_cbr.py  test_classics.py  test_config.py  test_metron_source.py  test_models.py  test_resolver.py  test_rss.py  test_wikidata.py
tests/fixtures/: aipt_review.html  cbr_highest_rated.html  cbr_issue.html  metron_issue_detail.json  rss_reviews.xml  wikidata_eisner.json
