[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "riso-discover-feed"
version = "0.1.0"
description = "Server-side ingestion service that builds discover.json for the RISO iPad comic app."
requires-python = ">=3.10"
dependencies = [
    "mokkari>=3.27",
    "pydantic>=2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
riso-discover = "riso_discover.build:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
